; ModuleID = '/home/carl/AnghaBench/freebsd/sys/ofed/drivers/infiniband/core/extr_ib_cm.c_cm_format_rtu.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/ofed/drivers/infiniband/core/extr_ib_cm.c_cm_format_rtu.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cm_rtu_msg = type { i32, i32, i32, i32 }
%struct.cm_id_private = type { %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32, i32 }

@CM_RTU_ATTR_ID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cm_rtu_msg*, %struct.cm_id_private*, i8*, i64)* @cm_format_rtu to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cm_format_rtu(%struct.cm_rtu_msg* %0, %struct.cm_id_private* %1, i8* %2, i64 %3) #0 {
  %5 = alloca %struct.cm_rtu_msg*, align 8
  %6 = alloca %struct.cm_id_private*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  store %struct.cm_rtu_msg* %0, %struct.cm_rtu_msg** %5, align 8
  store %struct.cm_id_private* %1, %struct.cm_id_private** %6, align 8
  store i8* %2, i8** %7, align 8
  store i64 %3, i64* %8, align 8
  %9 = load %struct.cm_rtu_msg*, %struct.cm_rtu_msg** %5, align 8
  %10 = getelementptr inbounds %struct.cm_rtu_msg, %struct.cm_rtu_msg* %9, i32 0, i32 3
  %11 = load i32, i32* @CM_RTU_ATTR_ID, align 4
  %12 = load %struct.cm_id_private*, %struct.cm_id_private** %6, align 8
  %13 = getelementptr inbounds %struct.cm_id_private, %struct.cm_id_private* %12, i32 0, i32 1
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @cm_format_mad_hdr(i32* %10, i32 %11, i32 %14)
  %16 = load %struct.cm_id_private*, %struct.cm_id_private** %6, align 8
  %17 = getelementptr inbounds %struct.cm_id_private, %struct.cm_id_private* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 1
  %19 = load i32, i32* %18, align 4
  %20 = load %struct.cm_rtu_msg*, %struct.cm_rtu_msg** %5, align 8
  %21 = getelementptr inbounds %struct.cm_rtu_msg, %struct.cm_rtu_msg* %20, i32 0, i32 2
  store i32 %19, i32* %21, align 4
  %22 = load %struct.cm_id_private*, %struct.cm_id_private** %6, align 8
  %23 = getelementptr inbounds %struct.cm_id_private, %struct.cm_id_private* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load %struct.cm_rtu_msg*, %struct.cm_rtu_msg** %5, align 8
  %27 = getelementptr inbounds %struct.cm_rtu_msg, %struct.cm_rtu_msg* %26, i32 0, i32 1
  store i32 %25, i32* %27, align 4
  %28 = load i8*, i8** %7, align 8
  %29 = icmp ne i8* %28, null
  br i1 %29, label %30, label %40

30:                                               ; preds = %4
  %31 = load i64, i64* %8, align 8
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %33, label %40

33:                                               ; preds = %30
  %34 = load %struct.cm_rtu_msg*, %struct.cm_rtu_msg** %5, align 8
  %35 = getelementptr inbounds %struct.cm_rtu_msg, %struct.cm_rtu_msg* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = load i8*, i8** %7, align 8
  %38 = load i64, i64* %8, align 8
  %39 = call i32 @memcpy(i32 %36, i8* %37, i64 %38)
  br label %40

40:                                               ; preds = %33, %30, %4
  ret void
}

declare dso_local i32 @cm_format_mad_hdr(i32*, i32, i32) #1

declare dso_local i32 @memcpy(i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
